# livekit_trainer

./: .gitignore  AGENTS.md  Dockerfile.dev  TODO.md  WHISPER_TRANSCRIPT_TIMESTAMPS.md  docker-compose.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: cmudict_phones.tsv  prompt_words.txt
docs/: ANDROID_APP_MAP.md  BULK_SCRIPTED_COLLECTION.md  CORRECTION_BATCH_FORMAT.md  MODEL_ARTIFACTS.md  PERSONALIZATION.md  TRAINING_BUNDLE_FORMAT.md
runtime/scorer/: Dockerfile  README.md  app.py  scorer.py
runtime/sync-server/: Cargo.toml  Dockerfile
runtime/sync-server/src/: db.rs  main.rs
scripts/: assemble_training_data.py  build_prompt_lexicon.py  compare_models.py  dataset_report.py  generate_config.py  import_bundle.py  import_corrections.py  sync_server.py  validate_bundle.py  write_manifest.py
tests/: test_assemble_training_data.py  test_dataset_report.py  test_generate_config.py  test_import_bundle.py  test_import_corrections.py
trainer/: Dockerfile.trainer  README.md
trainer/configs/: all_set.negatives.txt  all_set.realistic.yaml  all_set.yaml  all_set_ctx.yaml  all_set_realistic.yaml  beep.yaml  bump.yaml  bump_cal.yaml  hey_buddy.realistic.yaml  hey_buddy.yaml  smoke.yaml  smoke_ctx.yaml
trainer/patches/: 0001-parallel-augmentation.patch  augment_ctxfix.py  augment_realistic.py
trainer/scripts/: f5_gen_positives.py  f5_gen_positives.sh  smoke_train.sh  train.sh  train_ctxfix.sh  train_job.sh  train_realistic.sh
(+23 files in other folders)
