[package]
name = "livekit-trainer-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
